--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<h2>これは確認用です</h2>
-<p>テストメッセージ</p>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>▌共和国</title>
+</head>
+<body>
+    
+</body>
+</html>
