--- a/index.html
+++ b/index.html
@@ -3,9 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="web-icon.png" type="image/png">
+    <link rel="stylesheet" href="main.css">
     <title>▌共和国</title>
 </head>
 <body>
-    
+    <main>
+        <header>
+            <div>
+                <img src="web-icon.png" alt="サイトアイコン" width="80" height="80">
+            </div>
+
+            <ul>
+                <li><a href="index.html">ホーム</a></li>
+                <li><a href="about.html">当国について</a></li>
+                <li><a href="enter.html">入国について</a></li>
+                <li><a href="login.html">ログイン</a></li>
+            </ul>
+        </header>
+        <section>
+            <h1>ようこそ</h1>
+            <h3>きーうぃばぁど共和国へ</h3>
+            <p>とあるマインクラフトサーバーの中の一つである共和国です。当国は自由と創造性を重んじるコミュニティであり、争いなどを嫌います。</p>
+            <p>当国の特徴:</p>
+            <ul>
+                <li>自由な表現の場</li>
+                <li>多様な文化交流</li>
+                <li>創作活動の支援</li>
+            </ul>
+            <p>この共和国は招待,承認されない限り入国ができません。</p>
+        </section>
+        <section>
+            <h2>最新のお知らせ</h2>
+            <article>
+                <h3>新しい中央銀行が完成</h3>
+                <p>当国の中心部に新しい銀行が完成しました。共和国最大の中央銀行です。<br>通貨は「kft(キフルト)」です。</p>
+            </article>
+            <article>
+                <h3>コミュニティイベント開催予定</h3>
+                <p>来月、共和国内で建国際が開催予定です。</p>
+            </article>
+        </section>
+
+    </main>
+    <footer>
+        <small>© 2024-2025 Republic of Bird</small>
+    </footer>
 </body>
 </html>
